--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "shayari-app",
-    "slug": "shayari-app",
+    "name": "Gulzar Shayari & Quotes",
+    "slug": "gulzar-shayari-quotes",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
